# MGOSDT

./: .README.md.swp  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  async_ht_analysis.txt  async_ht_stat.txt  bin500.csv  bin500_ajp.csv  bin500_excl_sex.csv  bin_age.csv  bin_age_prior.csv  cachegrind.out.42203  cachegrind.out.46502  callgrind.out.27421  callgrind.out.85487  callgrind.out.9437  compas-1000.csv  config.json  config.json~  configure  configure.ac  cpu-profiling.md  gitlab-ci.yml  heart5.csv  ht_analysis.txt  ht_stat.txt  m2.json  massif.out.25043  massif.out.25263.iris  massif.out.57690  massif.out.62159  massif.out.m2  massif.out.syn5  mgosdt.data  (+16 more)
.cache/clangd/index/: bitmask.cpp.B910863128C65430.idx  bitmask.hpp.3EBB01D817E0EF6C.idx  (+48 more)
doc/: ASAN-syn5.txt  ASAN_syn3_binary.txt  ASAN_syn5_binary.txt  Asan-syn3.txt  Asan-syn5.txt  Valgrind-syn3.txt  Valgrind-syn5.txt  configuration.md  development.md  m2_0204.txt  m2_cmake.txt  poker1000c2ASAN.txt  pokerc2ASAN.txt  pokerc4ASAN.txt  pokerc4ASAN005.txt  pokerc5ASAN.txt  san-syn5.txt  syn3_cmake.txt  tennis.txt  test.txt  timing_profiling_cache_misses.md  valgrind_profiling_cache_misses.md
doc/ASAN/: m2.txt  syn3.txt  syn5.txt
doc/dynamic_analysis/: iris_mem.txt  iris_race.txt
doc/model_limit/: m2.txt  m2_bin.txt  perf_time  pokerc2.txt  pokerc2_bin.txt  pokerc4.txt  pokerc4_bin.txt  syn5.txt  syn5_bin.txt  ttt.txt
experiments/configurations/: compas.json  debug.json  debug1.json
outputs/: binned.json  chudi.json  fico.json  heart.json  iris.json  iris100_reg001.json  iris100_reg005.json  m1.json  m2.json  m3.json  syn3.json  syn5_001.json  syn5_O2.txt  ten.json  tic-tac-toe.json  tic-tac-toe8.json
outputs/balance/: m2.json
outputs/binary/: m1.json  m2.json  m3.json  syn3.json  syn5.json  tic-tac-toe.json
outputs/compas_bin/: bin500_age.json  bin500_age_prior.json  bin500_ajp.json  bin500_excl_sex.json
outputs/multi8t/: m2.json
outputs/n-ary/: abal4.json  hundred.json  m1.json  m2.json  m3.json  pokerc4005.json  syn3.json  syn5.json  tae-full.txt  tennis.txt  tic-tac-toe.json
outputs/poker/: poker1000c2.json  pokerc2.json  pokerc5.json
python/: example.py  irisOutput.txt  m2.py  m2Output.txt
python/model/: gosdt.py
slides/: MyExample.ipynb  mgosdt.ipynb  mgosdt.slides.html
slides/.ipynb_checkpoints/: mgosdt-checkpoint.ipynb
src/: bitmask.cpp  bitmask.hpp  configuration.cpp  configuration.hpp  dataset.cpp  dataset.hpp  gosdt.cpp  gosdt.hpp  graph.hpp  index.hpp  main.cpp  main.hpp  model.cpp  model.hpp  optimizer.cpp  optimizer.hpp  python_extension.hpp  queue.cpp  queue.hpp  state.cpp  state.hpp  tile.cpp  tile.hpp
test/: main.cpp  test.cpp  test.hpp  test_consistency.hpp  test_model.hpp
(+32 files in other folders)
